--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 CherryPy==18.6.0
 matplotlib==3.0.3
-nltk==3.4
+nltk==3.4.5
 numpy==1.18.2
 pandas==0.24.2
-torch==1.4.0+cpu
-torchvision==0.5.0+cpu
+torch>=1.4.0
+torchvision>=0.5.0
